Added active android back

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Around</string>
-    <string name="phn_msg">We’ll send a sms code to\n verify your phone number</string>
+    <string name="phn_msg">अापके फोन सत्यापित करने के लिए \n हम एक एसएमएस भेजेंगे</string>
 </resources>
