Added the recycler view for newsfeed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Around</string>
-    <string name="phn_msg">अापके फोन सत्यापित करने के लिए \n हम एक एसएमएस भेजेंगे</string>
+    <string name="phn_msg">आप्के फोन कि पुश्ति के लिये एक मेसेज भेजा जायेगा</string>
 </resources>
