--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Around</string>
     <string name="phn_msg">आप्के फोन कि पुश्ति के लिये एक मेसेज भेजा जायेगा</string>
-    <string name="string_next">Next</string>
+    <string name="string_next">ठीक है</string>
 </resources>
