--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,6 @@
     <string name="option_5">सिनेमा</string>
     <string name="option_6">खेलकूद</string>
     <string name="option_7">रोमांस</string>
+    <string name="getstarted">शुरू करें</string>
 
 </resources>
